add habit templates + admin system
